<resources>
    <string name="app_name">Personal Information</string>
    <string name="loggin">Loggin</string>
    <string name="password">Password</string>
    <string name="repetirPass">Repeat Password</string>
    <string name="email">E-mail</string>
    <string name="sex1">Female</string>
    <string name="sex2">Male</string>
    <string name="futbol">Soccer</string>
    <string name="cine">Cine</string>
    <string name="tv">TV</string>
    <string name="leer">Reading</string>
    <string name="sexo">Sex</string>
    <string name="nacimiento">Brithday</string>
    <string name="date">Date</string>
    <string name="fecha">...</string>
    <string name="ciudad">City</string>
    <string name="hobbies">Hobbies:</string>
    <string name="enviar">Send</string>
    <string name="limpiar">Clear</string>


    <string-array name="ciudades">

        <item>Arauca</item>
        <item>Armenia</item>
        <item>Leticia</item>
        <item>Medellín</item>
        <item>B/quilla</item>
        <item>Cartagena</item>
        <item>Tunja</item>
        <item>Manizales</item>
        <item>Yopal</item>
        <item>Popayán</item>
        <item>Florencia</item>
        <item>Valledupar</item>
        <item>Montería</item>
        <item>Quibdó</item>
        <item>Bogotá</item>
        <item>San José</item>
        <item>Inírida</item>
        <item>Neiva</item>
        <item>Riohacha</item>
        <item>Villavicencio</item>
        <item>Sta Marta</item>
        <item>Pasto</item>
        <item>Cúcuta</item>
        <item>Mocoa</item>
        <item>Pereira</item>
        <item>San Andrés</item>
        <item>B/manga</item>
        <item>Sincelejo</item>
        <item>Ibagué</item>
        <item>Mitú</item>
        <item>Pto Carreño</item>
        <item>Cali</item>


    </string-array>
</resources>
