<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bedoya.esau.datos.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.40"
                android:layout_height="match_parent"
                android:text="@string/loggin"
                android:textSize="12dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:id="@+id/eName"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textSize="12dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="12dp"
                android:id="@+id/ePw"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:text="@string/repetirPass"
                android:textSize="12dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="12dp"
                android:id="@+id/eRpw"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="12dp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textSize="12dp"
                android:id="@+id/eEmail"/>

        </LinearLayout>

   </LinearLayout>
|
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.05"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/sexo"
            android:textStyle="bold"
            android:textSize="12dp"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sex1"
                android:textSize="12dp"
                android:id="@+id/rFemale"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sex2"
                android:textSize="12dp"
                android:id="@+id/rMale"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/nacimiento"
                android:textSize="12dp"
                android:textStyle="bold"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/date"
                android:textSize="12dp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text=""
                android:textSize="12dp"
                android:id="@+id/dateDisplay"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/fecha"
                android:id="@+id/pickDate"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/ciudad"
                android:textSize="12dp"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:id="@+id/sCiudad"></Spinner>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textSize="12dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cine"
                android:textSize="12dp"
                android:id="@+id/cCine"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/futbol"
                android:textSize="12dp"
                android:id="@+id/cFutbol"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:textSize="12dp"
                android:textStyle="bold"
                android:id="@+id/bEnviar"
                android:layout_gravity="right"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leer"
                android:id="@+id/cLeer"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/tv"
                android:textSize="12dp"
                android:id="@+id/cTv"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:textSize="12dp"
                android:textStyle="bold"
                android:id="@+id/bLimpiar"
                android:layout_gravity="right"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/tResultado"/>

    </LinearLayout>


</LinearLayout>
